<resources>
    <string name="app_name">OTKD 2017</string>
    <string name="seconds">seconds</string>
    <string name="som_kapitan">SOM KAPITÁN</string>
    <string name="som_bezec">SOM BEŽEC</string>

    <string name="under_logo_slogan">v spolupráci s</string>
    <string name="label_captain_title">Spravuj celý svoj tím ako kapitán</string>
    <string name="label_captain_username">Používateľské meno</string>
    <string name="label_captain_password">Heslo</string>
    <string name="label_captain_terms">Prihlásením súhlasíte so všeobecnými podmienkami používania aplikácie.</string>
    <string name="label_captain_login">prihlásiť sa</string>

    <string name="label_runner_title">Běž so svojím tímom ako bežec</string>
    <string name="label_runner_username">Meno</string>
    <string name="label_runner_nickname">Priezvisko</string>
    <string name="label_runner_team_name">Názov tímu</string>
    <string name="label_runner_terms">Prihlásením súhlasíte so všeobecnými podmienkami používania aplikácie.</string>
    <string name="label_runner_login">prihlásit sa</string>

    <string name="label_chat_send">Odoslať</string>
    <!--font path-->
    <string name="opensans_font_path">fonts/OpenSans-Regular.ttf</string>
    <string name="opensans_semibold_font_path">fonts/OpenSans-Semibold.ttf</string>
    <string name="opensans_semibolditalic_font_path">fonts/OpenSans-SemiboldItalic.ttf</string>
    <string name="opensans_bold_font_path">fonts/OpenSans-Bold.ttf</string>
    <string name="opensans_extrabold_font_path">fonts/OpenSans-ExtraBold.ttf</string>
    <string name="email_hint">username</string>
    <string name="password_hint">password</string>
    <string name="signing_in">Prihlasuji..</string>
    <string name="bottom_menu_sections">Úseky</string>
    <string name="bottom_menu_team">Tím</string>
    <string name="bottom_menu_chat">Chat</string>
    <string name="bottom_menu_results">Výsledky</string>
    <string name="bottom_menu_profile">Profil</string>
    <string name="sections_toolbar_title">ÚSEKY</string>
    <string name="chat_toolbar_title">CHAT</string>
    <string name="results_toolbar_title">VÝSLEDKY</string>
    <string name="logoff">Odhlasiť sa</string>
    <string name="detail_trasy_a_poradie">Detail trasy a poradie</string>
    <string name="length_label">dĺžka</string>
    <string name="high_label">stúpanie</string>
    <string name="obtiaznost">obtiažnosť</string>
    <string name="section_down_label">klesanie</string>
    <string name="sections_label">úsekov</string>
    <string name="started_label">odštartovalo</string>
    <string name="results_length">km</string>
    <string name="results_finished">v cieli</string>
    <string name="standing">Poradie</string>
    <string name="team_name">Názov tímu</string>
    <string name="time">Čas</string>
    <string name="standing_in_category">Por. v kat.</string>
    <string name="complete_time">Celk. čas</string>
    <string name="best_time_label">Najlepší čas</string>
    <string name="final_team_standing_label">Celkové poradie tímu</string>
    <string name="final_standing_in_category">Celkové poradie v kategorii</string>
    <string name="standing_on_section_label">Poradie na úseku</string>
    <string name="expected_time_label">Odhadovaný čas</string>
    <string name="real_time_label">Realný čas</string>
    <string name="worst_time_label">Najhorší čas</string>
    <string name="time_at_finish_label">Čas preběhnutia</string>
    <string name="team_time_label">Celkový čas tímu</string>
    <string name="category_label">Kategoria</string>
    <string name="time_on_section">Čas na ús.</string>
    <string name="profile_toolbar_title">PROFIL</string>
</resources>
