<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search"
          android:title="@string/bottom_menu_sections"
          android:icon="@drawable/ic_sections" />
    <item android:id="@+id/action_team"
          android:title="@string/bottom_menu_team"
          android:icon="@drawable/ic_team" />
    <item android:id="@+id/action_chat"
          android:title="@string/bottom_menu_chat"
          android:icon="@drawable/ic_chat" />
    <item android:id="@+id/action_results"
          android:title="@string/bottom_menu_results"
          android:icon="@drawable/ic_results" />
    <item android:id="@+id/action_profile"
          android:title="@string/bottom_menu_profile"
          android:icon="@drawable/ic_user_info" />
</menu>