<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    >

    <TextView
        android:id="@+id/vStandingLabel"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/standing"
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_widthPercent="14%"
        />

    <TextView
        android:id="@+id/vTeamNameLabel"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/vStandingLabel"
        android:ellipsize="marquee"
        android:maxLines="2"
        android:text="@string/team_name"
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_widthPercent="40%"
        />

    <TextView
        android:id="@+id/vTimeOnSectionLabel"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/vTeamNameLabel"
        android:text="@string/time_on_section"
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_widthPercent="20%"
        />

    <TextView
        android:id="@+id/vCompleteTimeLabel"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/vTimeOnSectionLabel"
        android:gravity="start"
        android:text="@string/complete_time"
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_widthPercent="20%"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_width"
        android:layout_below="@+id/vTeamNameLabel"
        android:background="@color/colorPrimary"
        />


</android.support.percent.PercentRelativeLayout>