<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="eu.nanooq.otkd.activities.LoginActivity"
    >

    <include
        android:id="@+id/mToolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/slogan"
        fontPath="@string/opensans_semibold_font_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mToolbar"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="26sp"
        tools:text="@string/label_captain_title"

        />

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/mLoginArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slogan"

        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/vUserName"
            style="@style/Widget.AppCompat.EditText.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user"
            android:inputType="textEmailAddress"
            />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/vPassword"
            style="@style/Widget.AppCompat.EditText.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vUserName"
            android:drawableStart="@drawable/ic_password"
            android:inputType="textPassword"
            />

        <ImageButton
            android:id="@+id/vResetPwd"
            style="?android:buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/vUserName"
            android:layout_marginStart="-70dp"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@+id/vPassword"
            android:src="@drawable/ic_forgot_password"

            />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/vTeamName"
            style="@style/Widget.AppCompat.EditText.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vPassword"
            android:drawableStart="@drawable/ic_password"
            android:inputType="textPersonName"
            android:visibility="invisible"
            />


    </android.support.percent.PercentRelativeLayout>

    <TextView
        android:id="@+id/legal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mLoginArea"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/label_captain_terms"
        android:textColor="@color/secondaryTextColor"
        android:windowSoftInputMode="adjustResize"
        />

    <Button
        android:id="@+id/mLoginBtn"
        fontPath="@string/opensans_semibold_font_path"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/legal"
        android:layout_margin="16dp"
        android:background="@drawable/bg_btn_disabled"
        android:text="@string/label_captain_login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:windowSoftInputMode="adjustResize"
        />

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:src="@drawable/bg_bottom_login"
        android:tint="@color/colorPrimary"
        />

</android.support.percent.PercentRelativeLayout>
