<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/results_per_section"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/results_per_section_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        >

        <com.google.android.gms.maps.MapView
            android:id="@+id/mMapView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            />

        <ImageView
            android:id="@+id/mMapMask"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="-240dp"
            android:background="@android:color/transparent"
            />

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            >

            <TextView
                android:id="@+id/vSectionsResultCount"
                style="@style/SectionDetail.Value"
                android:layout_height="wrap_content"
                android:layout_marginStart="-1dp"
                app:layout_widthPercent="50%"
                tools:text="12"

                />

            <TextView
                android:id="@+id/section_count_label"
                style="@style/SectionDetail.Label"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vSectionsResultCount"
                android:layout_marginStart="-1dp"
                android:text="@string/sections_label"
                app:layout_widthPercent="50%"
                />

            <View
                android:id="@+id/sep_length"
                android:layout_height="@dimen/separator_width"
                android:layout_below="@+id/section_count_label"
                android:layout_marginStart="-1dp"
                android:background="@color/colorPrimary"
                app:layout_marginEndPercent="5%"
                app:layout_widthPercent="40%"
                />

            <TextView
                android:id="@+id/vSectionStartedValue"
                style="@style/SectionDetail.Value"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sep_length"
                android:layout_marginStart="-1dp"
                app:layout_widthPercent="50%"
                tools:text="32 timov"

                />

            <TextView
                android:id="@+id/section_started_label"
                style="@style/SectionDetail.Label"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vSectionStartedValue"
                android:layout_marginStart="-1dp"
                android:text="@string/started_label"
                app:layout_widthPercent="50%"
                />

            <View
                android:id="@+id/sep_lengtha"
                android:layout_width="@dimen/separator_width"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimary"

                />

            <TextView
                android:id="@+id/vSectionResultLengthValue"
                style="@style/SectionDetail.Value"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-1dp"
                android:layout_toEndOf="@+id/sep_lengtha"
                app:layout_widthPercent="50%"
                tools:text="365"
                />

            <TextView
                android:id="@+id/section_length_label"
                style="@style/SectionDetail.Label"
                android:layout_height="wrap_content"
                android:layout_below="@id/vSectionResultLengthValue"
                android:layout_toEndOf="@+id/sep_lengtha"
                android:text="@string/results_length"
                app:layout_widthPercent="50%"

                />

            <View
                android:id="@+id/sep_2"
                android:layout_height="@dimen/separator_width"
                android:layout_below="@+id/section_length_label"
                android:layout_marginEnd="-1dp"
                android:layout_toEndOf="@+id/sep_lengtha"
                android:background="@color/colorPrimary"
                app:layout_marginStartPercent="5%"
                app:layout_widthPercent="40%"
                />

            <TextView
                android:id="@+id/vSectionFinishedValue"
                style="@style/SectionDetail.Value"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sep_2"
                android:layout_marginEnd="-1dp"
                android:layout_toEndOf="@+id/sep_lengtha"
                app:layout_widthPercent="50%"
                tools:text="3"
                />

            <TextView
                android:id="@+id/section_finished_label"
                style="@style/SectionDetail.Label"
                android:layout_height="wrap_content"
                android:layout_below="@id/vSectionFinishedValue"
                android:layout_toEndOf="@+id/sep_lengtha"
                android:text="@string/results_finished"
                app:layout_widthPercent="50%"

                />


        </android.support.percent.PercentRelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_width"
            android:background="@color/colorPrimary"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/vSectionsResultsRecView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>